[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://images/cutscenes/game_over.png" type="Texture" id=2]
[ext_resource path="res://audio/start.wav" type="Sample" id=3]
[ext_resource path="res://images/HUD/press_start.png" type="Texture" id=4]
[ext_resource path="res://images/HUD/icon.png" type="Texture" id=5]
[ext_resource path="res://other/ingame.fnt" type="BitmapFont" id=6]

[sub_resource type="Animation" id=1]

resource/name = "select"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 2:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 2:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=3]

samples/start = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="game_over" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/select = SubResource( 1 )
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sprite 2" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 156, 126 )
texture = ExtResource( 4 )

[node name="pointer" type="Sprite" parent="."]

transform/pos = Vector2( 113.416, 117.011 )
texture = ExtResource( 5 )

[node name="continue_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 121.0
margin/top = 111.0
margin/right = 265.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 6 )
text = "continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="quit_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 121.0
margin/top = 129.0
margin/right = 265.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 6 )
text = "quit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="action_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false


